# noise_reduction

./: pyproject.toml  requirements.txt
noise_reduction/: examples.ipynb  noisereduce library.ipynb  sounddevice.ipynb  utils.py
