[tool.poetry]
name = "noise-reduction"
version = "0.1.0"
description = ""
authors = ["Scott Cronin <j.scott.cronin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
jupyterlab = "^4.0.6"
ipywidgets = "^8.1.1"
scipy = "^1.11.2"
numpy = "^1.26.0"
pyaudio = "^0.2.13"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
